@@ -1,4 +1,10 @@
 ==================================
+Rilascio 1.70.27    del XX/03/2016
+==================================
+
+ryUnbound: corretto lo scroll orizzontale con editmode abilitato.
+
+==================================
 Rilascio 1.70.26    del 28/03/2016
 ==================================
 
